# conflux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  refactoring-tasks.md  rustfmt.toml  tasks.md
.augment/rules/: RIP.md
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: default.toml
docs/: Approval Workflow.md  CLI.md  Client SDK.md  Cluster Operations & Management.md  Config Managment.md  Config-as-Code.md  Core Consensus Layer.md  Data Lifecycle & Garbage Collection.md  Metadata DB.md  Multi-tenancy & Quota Management.md  Observability.md  Packaging, Deployment & Distribution.md  Protocol Layer.md  RBAC.md  Security & Encryption.md  State Machine.md  Storage.md  Watch Service.md  dependency-review.md  high-level-design.md  overview.md  task.md
docs/analysis/: Core-2-Implementation-Review.md  Epic-Core-2-3-Analysis.md  Epic-Core-2-Implementation-Progress.md
docs/auth/: README.md
docs/epic/: Epic-Core-2-Analysis-Report.md  Epic-Core-2-Current-Issues-And-Fixes.md  Epic-Core-2-Implementation-Guide.md  Epic-Core-2.md  Epic-Core-3.md  Epic-Core-4.md  Epic-SEC-1.md
examples/: auth_demo.rs  cluster_validation.rs  performance_benchmark.rs
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/auth/: api.rs  middleware.rs  mod.rs  model.conf  service.rs  unit_tests.rs
src/benchmarks/: mod.rs
src/protocol/: mod.rs
src/protocol/http/: handlers.rs  middleware.rs  mod.rs  schemas.rs
src/raft/: auth.rs  client.rs  cluster_test.rs  error_handling_tests.rs  integration_tests.rs  log_storage.rs  metrics.rs  mod.rs  network.rs  network_tests.rs  node.rs  node_tests.rs  performance_tests.rs  simple_cluster_tests.rs  state_machine.rs  types.rs  validation.rs  validation_tests.rs
src/raft/client/: helpers.rs  mod.rs  tests.rs  types.rs
src/raft/node/: cluster_ops.rs  config.rs  core.rs  helpers.rs  mod.rs  resource_limiter.rs
src/raft/store/: command_handlers.rs  config_ops.rs  config_ops_tests.rs  constants.rs  delete_handlers.rs  mod.rs  persistence.rs  raft_impl.rs  raft_impl_tests.rs  raft_storage.rs  raft_storage_tests.rs  raft_storage_v2.rs  store.rs  test_fixes.rs  tests.rs  transaction.rs  types.rs
src/raft/store/commands/: mod.rs  release_commands.rs  version_commands.rs
src/raft/types/: command.rs  command_tests.rs  config.rs  helpers.rs  mod.rs  version.rs
src/raft/validation/: cluster_validation.rs  cluster_validation_test.rs  comprehensive.rs  comprehensive_test.rs  config.rs  config_test.rs  mod.rs  node_validation.rs  node_validation_test.rs  raft_input_validator.rs  raft_input_validator_test.rs  timeout_validation.rs  timeout_validation_test.rs
test_data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000015
